src/test/ui/generator/resume-arg-late-bound.nll.stderr
error: higher-ranked subtype error
  --> $DIR/resume-arg-late-bound.rs:15:5
   |
LL |     test(gen);
   |     ^^^^^^^^^

error: aborting due to previous error

